--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,32 +1,30 @@
-// # Front-end Style Guide
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap");
 
-// ## Layout
+// Color variables
+$very-dark-magenta: hsl(300, 43%, 22%);
+$soft-pink: hsl(333, 80%, 67%);
+$dark-grayish-magenta: hsl(303, 10%, 53%);
+$light-grayish-magenta: hsl(300, 24%, 96%);
+$white: hsl(0, 0%, 100%);
 
-// The designs were created to the following widths:
+// Global resets
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-// - Mobile: 375px
-// - Desktop: 1440px
-
-// ## Colors
-
-// ### Primary
-
-// Very Dark Magenta: hsl(300, 43%, 22%)
-// Soft Pink: hsl(333, 80%, 67%)
-
-// ### Neutral
-
-// Dark Grayish Magenta: hsl(303, 10%, 53%)
-// Light Grayish Magenta: hsl(300, 24%, 96%)
-// White: hsl(0, 0%, 100%)
-
-// ## Typography
-
-// ### Body Copy
-
-// - Font size: 15px
-
-// ### Font
-
-// - Family: [League Spartan](https://fonts.google.com/specimen/League+Spartan)
-// - Weights: 400, 500, 700
+body {
+  font-size: 0.94rem;
+  font-family: "League Spartan", sans-serif;
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
+  padding: 2rem;
+  background-image: url("../images/bg-pattern-top-desktop.svg"),
+    url("../images/bg-pattern-bottom-desktop.svg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: top left, bottom right;
+}
