--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -3,6 +3,7 @@
 // Color variables
 $very-dark-magenta: hsl(300, 43%, 22%);
 $soft-pink: hsl(333, 80%, 67%);
+$light-magenta: hsl(290, 30%, 96%);
 $dark-grayish-magenta: hsl(303, 10%, 53%);
 $light-grayish-magenta: hsl(300, 24%, 96%);
 $white: hsl(0, 0%, 100%);
@@ -19,12 +20,124 @@ $white: hsl(0, 0%, 100%);
 body {
   font-size: 0.94rem;
   font-family: "League Spartan", sans-serif;
+  line-height: 1.4;
   display: grid;
   place-content: center;
   min-height: 100vh;
-  padding: 2rem;
+  padding: 5rem;
   background-image: url("../images/bg-pattern-top-desktop.svg"),
     url("../images/bg-pattern-bottom-desktop.svg");
   background-repeat: no-repeat, no-repeat;
   background-position: top left, bottom right;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 2rem;
+  row-gap: 4rem;
+  max-width: 70rem;
+}
+
+header {
+  width: 80%;
+
+  h1 {
+    font-size: 3.5rem;
+    color: $very-dark-magenta;
+    font-weight: 700;
+    letter-spacing: -1.5px;
+    line-height: 0.85;
+    margin-bottom: 1.5rem;
+  }
+
+  p {
+    font-size: 1.1rem;
+    color: $dark-grayish-magenta;
+    font-weight: 500;
+  }
+}
+
+aside {
+  justify-self: end;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 1rem;
+
+  & > div {
+    background-color: $light-magenta;
+    width: 80%;
+    padding: 1rem 2rem;
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    p {
+      font-size: 1rem;
+      font-weight: 700;
+      color: $very-dark-magenta;
+      margin-left: 1rem;
+    }
+
+    &.rating-1 {
+      margin-right: 16%;
+    }
+
+    &.rating-2 {
+      margin-right: 8%;
+    }
+  }
+}
+
+section {
+  grid-column: span 2;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: start;
+  gap: 2rem;
+
+  article {
+    background-color: $very-dark-magenta;
+    padding: 2.5rem 2rem;
+    border-radius: 0.5rem;
+    color: $white;
+
+    .intro {
+      display: grid;
+      grid-template-columns: 2.5rem auto;
+      grid-template-rows: repeat(2, 1fr);
+      column-gap: 1.5rem;
+      align-items: center;
+      margin-bottom: 1.5rem;
+
+      img {
+        grid-row: span 2;
+        width: 2.5rem;
+        border-radius: 50%;
+      }
+
+      h2 {
+        font-size: inherit;
+        font-weight: 500;
+        line-height: 0.9;
+        align-self: end;
+      }
+
+      p {
+        color: $soft-pink;
+      }
+    }
+
+    &.review-2 {
+      margin-top: 1rem;
+    }
+
+    &.review-3 {
+      margin-top: 2rem;
+    }
+  }
 }
