--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,21 @@ $dark-grayish-magenta: hsl(303, 10%, 53%);
 $light-grayish-magenta: hsl(300, 24%, 96%);
 $white: hsl(0, 0%, 100%);
 
+// Animations
+@keyframes entering {
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+  }
+}
+
+// Mixins
+@mixin add-animation($position-x, $position-y, $delay: 0s) {
+  transform: translate($position-x, $position-y);
+  opacity: 0;
+  animation: entering 1s $delay ease-out forwards;
+}
+
 // Global resets
 *,
 *::before,
@@ -41,6 +56,7 @@ main {
 
 header {
   width: 80%;
+  @include add-animation(-5rem, 0);
 
   h1 {
     font-size: 3.5rem;
@@ -85,10 +101,16 @@ aside {
 
     &.rating-1 {
       margin-right: 16%;
+      @include add-animation(10rem, 0);
     }
 
     &.rating-2 {
       margin-right: 8%;
+      @include add-animation(12rem, 0, 0.2s);
+    }
+
+    &.rating-3 {
+      @include add-animation(14rem, 0, 0.4s);
     }
   }
 }
@@ -132,12 +154,18 @@ section {
       }
     }
 
+    &.review-1 {
+      @include add-animation(0, 5rem);
+    }
+
     &.review-2 {
       margin-top: 1rem;
+      @include add-animation(0, 6rem, 0.2s);
     }
 
     &.review-3 {
       margin-top: 2rem;
+      @include add-animation(0, 7rem, 0.4s);
     }
   }
 }
