--- a/css/styles.css
+++ b/css/styles.css
@@ -62,12 +62,15 @@ aside {
     border-radius: 0.5rem;
     display: flex;
     align-items: center;
-    gap: 0.5rem; }
+    gap: 1.5rem; }
+    aside > div .stars {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem; }
     aside > div p {
       font-size: 1rem;
       font-weight: 700;
-      color: #502050;
-      margin-left: 1rem; }
+      color: #502050; }
     aside > div.rating-1 {
       margin-right: 16%;
       transform: translate(10rem, 0);
@@ -126,3 +129,66 @@ section {
       transform: translate(0, 7rem);
       opacity: 0;
       animation: entering 1s 0.4s ease-out forwards; }
+
+@media (prefers-reduced-motion: reduce) {
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-delay: 0.01ms !important; } }
+
+@media (max-width: 1000px) {
+  main {
+    grid-template-columns: 1fr;
+    row-gap: 4rem;
+    max-width: 70rem; }
+  header {
+    transform: translate(0, -5rem);
+    opacity: 0;
+    animation: entering 1s 0s ease-out forwards;
+    text-align: center;
+    justify-self: center; }
+  aside {
+    justify-self: center;
+    max-width: 35rem;
+    align-items: center;
+    text-align: center; }
+    aside > div {
+      margin-right: 0 !important; }
+  section {
+    grid-column: span 1;
+    grid-template-columns: 1fr;
+    max-width: 40rem;
+    justify-self: center;
+    gap: 1.5rem; }
+    section article {
+      margin-top: 0 !important; }
+      section article.review-1 {
+        transform: translate(-5rem, 0);
+        opacity: 0;
+        animation: entering 1s 0s ease-out forwards; }
+      section article.review-2 {
+        transform: translate(-6rem, 0);
+        opacity: 0;
+        animation: entering 1s 0.2s ease-out forwards; }
+      section article.review-3 {
+        transform: translate(-7rem, 0);
+        opacity: 0;
+        animation: entering 1s 0.4s ease-out forwards; } }
+
+@media (max-width: 675px) {
+  body {
+    padding: 4rem 1.5rem;
+    background-image: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg"); }
+  main {
+    row-gap: 2rem; }
+  header {
+    width: 100%; }
+    header h1 {
+      font-size: 2.6rem; }
+  aside > div {
+    width: 100%;
+    flex-direction: column;
+    gap: 0.5rem; }
+  section article {
+    padding: 1.5rem; } }
