--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -90,13 +90,18 @@ aside {
     border-radius: 0.5rem;
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1.5rem;
+
+    .stars {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
 
     p {
       font-size: 1rem;
       font-weight: 700;
       color: $very-dark-magenta;
-      margin-left: 1rem;
     }
 
     &.rating-1 {
@@ -167,5 +172,95 @@ section {
       margin-top: 2rem;
       @include add-animation(0, 7rem, 0.4s);
     }
+  }
+}
+
+// Remove animations for users that prefer not to see them
+@media (prefers-reduced-motion: reduce) {
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-delay: 0.01ms !important;
+  }
+}
+
+// Media queries
+@media (max-width: 1000px) {
+  main {
+    grid-template-columns: 1fr;
+    row-gap: 4rem;
+    max-width: 70rem;
+  }
+
+  header {
+    @include add-animation(0, -5rem);
+    text-align: center;
+    justify-self: center;
+  }
+
+  aside {
+    justify-self: center;
+    max-width: 35rem;
+    align-items: center;
+    text-align: center;
+
+    & > div {
+      margin-right: 0 !important;
+    }
+  }
+
+  section {
+    grid-column: span 1;
+    grid-template-columns: 1fr;
+    max-width: 40rem;
+    justify-self: center;
+    gap: 1.5rem;
+
+    article {
+      margin-top: 0 !important;
+
+      &.review-1 {
+        @include add-animation(-5rem, 0);
+      }
+
+      &.review-2 {
+        @include add-animation(-6rem, 0, 0.2s);
+      }
+
+      &.review-3 {
+        @include add-animation(-7rem, 0, 0.4s);
+      }
+    }
+  }
+}
+
+@media (max-width: 675px) {
+  body {
+    padding: 4rem 1.5rem;
+    background-image: url("../images/bg-pattern-top-mobile.svg"),
+      url("../images/bg-pattern-bottom-mobile.svg");
+  }
+
+  main {
+    row-gap: 2rem;
+  }
+
+  header {
+    width: 100%;
+
+    h1 {
+      font-size: 2.6rem;
+    }
+  }
+
+  aside > div {
+    width: 100%;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  section article {
+    padding: 1.5rem;
   }
 }
